message page and user page,file reset

--- a/find-content.html
+++ b/find-content.html
@@ -6,30 +6,7 @@
     <title></title>
     <script src="js/mui.min.js"></script>
     <link href="css/mui.min.css" rel="stylesheet"/>
-    <style type="text/css">
-    	#find-content{width:100%;overflow:hidden;}
-    	.nav{width: 100%;background:#FFFFFF;overflow: hidden;margin:15px 0;}
-    	.nav a{font-size: 14px;}
-    	.nav-hot-job{width: 25%;height: 90px;float: left;border-right: 1px solid #F1F1F1;}
-    	.nav-hot-job a{display: block;line-height: 90px;color: #E9E9E9;text-align: center;}
-    	.nav-list{width: 75%;float: left;height: 90px;position: relative;}
-    	.nav-list:before{content:"";height:0;width:100%;display: block;border-top: 1px solid #F1F1F1;position: absolute;left: 0;top:44px;}
-    	.nav-list a{width:33.333%;color: #949494;height: 26px;margin:9px 0;float: left;line-height: 26px;
-    	text-align: center;box-sizing: border-box;-webkit-box-sizing: border-box;border-right: 1px solid #F1F1F1;}
-    	.nav-list a:nth-of-type(3n){border-right: 1px solid #FFFFFF;}
-    	.wk-title{width: 100%;height: 40px;background:#FFFFFF;line-height: 41px;font-size: 16px;}
-    	.wk-title .color-block{width:9px;height: 22px;background:#FF5A5A;margin:9px 8px 9px 15px;
-    	float:left;border-radius: 6px;}
-    	.wk-title .more{width: 56px;height: 40px;display: block;float:right;text-align:left;
-    	color:#8E8E8E;position: relative;}
-    	.wk-title .more .mui-icon{position: absolute;top: 8px;right:5px;}
-    	.tag-item{height: 20px;line-height: 20px;font-size: 14px;}
-    	.tag-item .mui-icon{font-size: 20px;margin-right:3px;margin-left: -3px;}
-    	.workplace .mui-ellipsis{margin:8px 0;color:#C2C2C2;}
-    	.workplace .mui-media{padding-top: 18px;padding-top:18px;}
-    	.workplace .mui-table-view-cell:after{left: 0;}
-    	.workplace .mui-table-view .mui-media-object{max-width: 70px;height: 60px;}
-    </style>
+    <link href="css/find/find-content.css" rel="stylesheet"/>
 </head>
 <body>
 	<div id="find-content" class="mui-content">
