--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
 			<span class="mui-tab-label">发现</span>
 		</a>
-		<a class="mui-tab-item" href="chat.html">
+		<a class="mui-tab-item" href="message.html">
 			<span class="mui-icon mui-icon-contact"></span>
 			<span class="mui-tab-label">消息</span>
 		</a>
@@ -48,7 +48,7 @@
 				}]
 			});
 			//webview页面路由
-			var subpages = ['index-list.html', 'find.html', 'chat.html', 'user.html'];
+			var subpages = ['index-list.html', 'find.html', 'message.html', 'user.html'];
 			var subpage_style = {
 				top: '45px',
 				bottom: '51px'
