--- a/user.html
+++ b/user.html
@@ -3,14 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <script src="js/mui.min.js"></script>
+    <title>用户中心</title>
     <link href="css/mui.min.css" rel="stylesheet"/>
-    <script type="text/javascript" charset="UTF-8">
-      	mui.init();
-    </script>
+    <link href="css/user/user.css" rel="stylesheet"/>
 </head>
 <body>
-	我的页面
+	<div id="user-header">
+		<a class="Head-portrait" href="#"><img src="images/logo.png"/></a>
+		<p class="user-name">嗨小冷</p>
+	</div>
+	<div class="mui-content">
+			<ul id="info-nav" class="mui-table-view">
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						<span class="mui-icon mui-icon-compose"></span>
+						我的简历
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						<span class="mui-icon mui-icon-star"></span>
+						我的收藏
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						<span class="mui-icon mui-icon-gear"></span>
+						账号设置
+					</a>
+				</li>
+			</ul>
+		</div>
+	<script src="js/mui.min.js"></script>
+	<script type="text/javascript" charset="UTF-8">
+      	mui.init();
+    </script>
 </body>
 </html>
