--- a/find.html
+++ b/find.html
@@ -6,19 +6,7 @@
     <title></title>
     <script src="js/mui.min.js"></script>
     <link href="css/mui.min.css" rel="stylesheet"/>
-    <style type="text/css">
-    	#header{background:#FBFAFA;box-shadow: none;}
-    	#header .mui-btn-link{font-size: 16px;}
-    	#header .mui-btn-link .mui-icon{font-size: 20px;}
-    	#header .mui-title{padding-left: 22px;text-align: left;line-height: 28px;}
-    	#header .mui-title a span{margin-left: 10px;font-size: 18px;}
-    	#header .mui-icon,#header .mui-btn-nav{color:#FE7373;}
-    	#header .mui-btn-nav .mui-icon,#header .mui-title a span{color:#C8C7C7;}
-    	.find-top-search{width: 100%;height: 26px;margin-top:9px;background:rgba(0,0,0,.1);display: block;border-radius: 14px;}
-		.find-top-search span.pacText{font-size:14px;}
-		/*#header .mui-btn-link{font-size: 16px;}*/
-    	#header .find-top-search span.pacText{font-size:14px;}
-		</style>
+    <link href="css/find/find.css" rel="stylesheet"/>
     <script type="text/javascript" charset="UTF-8">
       	mui.init({
       		subpages: [{
